refactor(stage1): Выполнить рефакторинг для первого этапа