@@ -5,53 +5,54 @@ import org.example.coffeservice.dto.response.coffee.BookingResponseDTO;
 import org.example.coffeservice.services.BookingService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.access.prepost.PreAuthorize;
-import org.springframework.security.core.Authentication;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/bookings")
 public class BookingController {
 
-    @Autowired
-    private BookingService bookingService;
+  @Autowired private BookingService bookingService;
 
-    @GetMapping("/")
-    @PreAuthorize("hasRole('ADMIN')")
-    public List<BookingResponseDTO> getAllBookings() {
-        return bookingService.getAllBookings();
-    }
+  @GetMapping("/")
+  @PreAuthorize("hasRole('ADMIN')")
+  public List<BookingResponseDTO> getAllBookings() {
+    return bookingService.getAllBookings();
+  }
 
-    @GetMapping("/user")
-    public List<BookingResponseDTO> getBookingsByUser(Authentication authentication) {
-        return bookingService.getBookingsByUser();
-    }
+  @GetMapping("/user")
+  public List<BookingResponseDTO> getBookingsByUser() {
+    return bookingService.getBookingsByUser();
+  }
 
-    @GetMapping("/desk/{deskId}")
-    @PreAuthorize("hasRole('ADMIN')")
-    public List<BookingResponseDTO> getBookingsByDesk(@PathVariable Long deskId) {
-        try {
-            return bookingService.getBookingsByDesk(deskId).stream()
-                    .map(booking -> bookingService.convertToDTO(booking))
-                    .toList();
-        } catch (Exception e) {
-            throw new RuntimeException("Ошибка получения бронирований для стола с id " + deskId, e);
-        }
+  @GetMapping("/desk/{deskId}")
+  @PreAuthorize("hasRole('ADMIN')")
+  public List<BookingResponseDTO> getBookingsByDesk(@PathVariable Long deskId) {
+    try {
+      return bookingService.getBookingsByDesk(deskId).stream()
+          .map(bookingService::convertToDTO)
+          .collect(Collectors.toList());
+    } catch (Exception exception) {
+      throw new RuntimeException(
+          "Ошибка получения бронирований для стола с id " + deskId, exception);
     }
+  }
 
-    @PostMapping("/create")
-    public BookingResponseDTO createBooking(@RequestBody BookingRequestDTO bookingRequest, Authentication authentication) {
-        return bookingService.createBooking(bookingRequest);
-    }
+  @PostMapping("/create")
+  public BookingResponseDTO createBooking(@RequestBody BookingRequestDTO bookingRequest) {
+    return bookingService.createBooking(bookingRequest);
+  }
 
-    @PutMapping("/update/{id}")
-    public BookingResponseDTO updateBooking(@PathVariable Long id, @RequestBody BookingRequestDTO bookingRequest) {
-        return bookingService.updateBooking(id, bookingRequest);
-    }
+  @PutMapping("/update/{id}")
+  public BookingResponseDTO updateBooking(
+      @PathVariable Long id, @RequestBody BookingRequestDTO bookingRequest) {
+    return bookingService.updateBooking(id, bookingRequest);
+  }
 
-    @DeleteMapping("/delete/{id}")
-    public void deleteBooking(@PathVariable Long id) {
-        bookingService.deleteBooking(id);
-    }
+  @DeleteMapping("/delete/{id}")
+  public void deleteBooking(@PathVariable Long id) {
+    bookingService.deleteBooking(id);
+  }
 }
